--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.12",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@types/node": "^15.14.9",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
@@ -10,7 +14,6 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^4.23.6",
     "axios": "^0.21.4",
-    "bootstrap": "^5.2.2",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-xhr-backend": "^3.2.2",
